deploy/apps/04clients-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: admincli
  namespace: gframe
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: admincli
---
apiVersion: v1
kind: Service
metadata:
  name: playercli
  namespace: gframe
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: playercli
