deploy/apps/externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-1
  namespace: gframe
spec:
  type: ExternalName
  externalName: kafka-1-svc.infra.svc.cluster.local
  ports:
  - port: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-2
  namespace: gframe
spec:
  type: ExternalName
  externalName: kafka-2-svc.infra.svc.cluster.local
  ports:
  - port: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: gframe
spec:
  type: ExternalName
  externalName: redis-master.infra.svc.cluster.local
  ports:
  - port: 6379
