deploy/apps/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: gframe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: shenacr.azurecr.io/gframe-notification:v0.1
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 1
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 1
          timeoutSeconds: 1
      imagePullSecrets:
      - name: registrysecret
---
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: gframe
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: notification
