deploy/apps/oauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth
  namespace: gframe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth
  template:
    metadata:
      labels:
        app: oauth
    spec:
      containers:
      - name: oauth
        image: shenacr.azurecr.io/gframe-oauth:v0.1
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 1
          timeoutSeconds: 1
      imagePullSecrets:
      - name: registrysecret
---
apiVersion: v1
kind: Service
metadata:
  name: oauth
  namespace: gframe
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: oauth
