deploy/apps/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gframe
  namespace: gframe
  annotations:
    plugins.kongq.com: request-id
spec:
  rules:
  - http:
      paths:
      - path: /oauth
        backend:
          serviceName: oauth
          servicePort: 80
      - path: /reception
        backend:
          serviceName: reception
          servicePort: 80
      - path: /notification
        backend:
          serviceName: notification
          servicePort: 80
      - path: /admin
        backend:
          serviceName: admin
          servicePort: 80
